[package]
name = "xdr_brk"
version = "0.1.2"
edition = "2024"
authors = ["algebnaly <algebnaly@algebnaly.com>"]
license = "MIT"
description = "A crate that provides serialization and deserialization for XDR (External Data Representation) format."
keywords = ["xdr", "serialization", "deserialization", "binary"]
categories = ["encoding"]
readme = "README.md"
repository = "https://github.com/algebnaly/xdr_brk"


[dependencies]
serde = { version = "1.0", features = ["alloc", "derive"] }
xdr_brk_enum = { version = "0.1" }

[dev-dependencies]
serde_bytes = { version = "0.11", features = ["alloc"] }
